// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caliper event from req nav_goto 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": "http://purl.imsglobal.org/caliper/v1/NavigationEvent",
  "action": "http://purl.imsglobal.org/vocab/caliper/v1/action#NavigatedTo",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "internalName": "nav:goto",
    "navType": "goto",
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/draft/testDraftIdReq#toReq",
  "referrer": "https://hostnameReq/api/draft/testDraftIdReq#fromReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req question_checkAnswer 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Submitted",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/practice/testDraftIdReq/testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req question_hide 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Hid",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req question_hideExplanation 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Hid",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/draft/testDraftIdReq?context=explanation#testQuestionIdReq",
}
`;

exports[`Caliper event from req question_retry 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Reset",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/practice/testDraftIdReq/testQuestionIdReq",
}
`;

exports[`Caliper event from req question_setResponse 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": "http://purl.imsglobal.org/caliper/v1/AssessmentItemEvent",
  "action": "Completed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": Object {
    "attempt": "https://hostnameReq/api/attempt/testAttemptIdReq",
    "extensions": Object {
      "response": undefined,
      "targetId": undefined,
    },
    "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
    "type": "Response",
  },
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https:///api/draft/testDraftIdReq",
}
`;

exports[`Caliper event from req question_showExplanation 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": "http://purl.imsglobal.org/caliper/v1/ViewEvent",
  "action": "Viewed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/draft/testDraftIdReq?context=explanation#testQuestionIdReq",
}
`;

exports[`Caliper event from req question_view 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": "http://purl.imsglobal.org/caliper/v1/ViewEvent",
  "action": "Viewed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/draft/testDraftIdReq#testQuestionIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req score_clear 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Reset",
  "actor": "https://hostnameReq/api/server",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "urn:uuid:testIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https://hostnameReq/api/practice/testDraftIdReq/testItemIdReq",
}
`;

exports[`Caliper event from req score_set 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": "GradeEvent",
  "action": "Graded",
  "actor": "https://hostnameReq/api/viewer/client",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": Object {
    "@context": "http://purl.imsglobal.org/ctx/caliper/v1p1",
    "@type": "Score",
    "attempt": "https://hostnameReq/api/practice/testDraftIdReq/testItemIdReq",
    "dateCreated": "2016-09-22T16:57:14.500Z",
    "id": "urn:uuid:testIdReq",
    "maxScore": 100,
    "scoreGiven": "scoreReq",
    "scoredBy": "https://hostnameReq/api/viewer/client",
  },
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/practice/testDraftIdReq/testItemIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req viewer_close 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": "http://purl.imsglobal.org/caliper/v1/SessionEvent",
  "action": "LoggedOut",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https://hostnameReq/api/system",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": "https:///api/draft/testDraftIdReq",
}
`;

exports[`Caliper event from req viewer_inactive 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Abandoned",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "inactiveDuration": "testInactiveDurationReq",
    "lastActiveTime": "testLastActiveTimeReq",
    "previewMode": false,
    "type": "inactive",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req viewer_leave 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Abandoned",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
    "type": "leave",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req viewer_return 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Resumed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "previewMode": false,
    "relatedEventId": "testRelatedEventIdreq",
    "type": "return",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;

exports[`Caliper event from req viewer_returnFromInactive 1`] = `
Event {
  "@context": "http://purl.imsglobal.org/ctx/caliper/v1/Context",
  "@type": null,
  "action": "Resumed",
  "actor": "https://hostnameReq/api/user/testUserIdReq",
  "edApp": "https://hostnameReq/api/system",
  "eventTime": "2016-09-22T16:57:14.500Z",
  "extensions": Object {
    "inactiveDuration": "testInactiveDurationReq",
    "lastActiveTime": "testLastActiveTimeReq",
    "previewMode": false,
    "relatedEventId": "testRelatedEventIdreq",
    "type": "returnFromInactive",
  },
  "federatedSession": "https://hostnameReq/api/launch/OboLtiLaunchIdReq",
  "generated": null,
  "group": null,
  "id": "urn:uuid:fb9826d0-3d7a-43b8-a5ad-3949ce620d91",
  "membership": null,
  "object": "https:///api/draft/testDraftIdReq",
  "session": "https://hostnameReq/api/session/SessionIdReq",
  "target": null,
}
`;
